--- a/csc372-hw/Tanks-for-Fish/templates/index.html
+++ b/csc372-hw/Tanks-for-Fish/templates/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+    Name: Victor Lor
+    Date: 2.23.2025
+
+    This is the index.html page for my 372 term project. The website is called Tanks for 
+    Fish, which is a website to buy products related to fish keeping.
+-->
 
 <head>
     <meta charset="UTF-8">
@@ -19,16 +26,15 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id="tff-nav">
             <a class="navbar-brand  tff-logo" href="index.html">
-                <img id="tanks-for-fish-logo" src="../assets/images/fish_tank3.png" alt="Bootstrap">
+                <img id="tanks-for-fish-logo" src="../assets/images/fish_tank3.png" alt="fish for tanks">
             </a>
             <div class="container-fluid">
-                <a class="navbar-brand title" id="single-day-regular-id"href="index.html">Tanks For Fish</a>
+                <a class="navbar-brand title" id="single-day-regular-id" href="index.html">Tanks For Fish</a>
                 <form class="d-flex search" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success nav-search-button" type="submit">Search</button>
                 </form>
-                <a id="cart" href=""><img id="shopping-cart" src="../assets/images/shopping_cart.png"> View My Cart</a>
-            </div>
+                <a id="cart" href="cart.html"><img id="shopping-cart" alt="shopping cart" src="../assets/images/shopping_cart.png"> View My Cart</a>
             </div>
         </nav>
     </header>
@@ -43,15 +49,14 @@
         </div>
         <div id="main-content-container">
             <div id="main-content-left">
-                <p>What you can expect <br> to find in-store:
-                    <ul>
-                        <li>Fish tanks</li>
-                        <li>Filters & filter <br>media</li>
-                        <li>Substrates</li>
-                        <li>Electricals</li>
-                        <li>Food</li>
-                    </ul>
-                </p>
+                <p>What you can expect <br> to find in-store: </p> 
+                <ul>
+                    <li>Fish tanks</li>
+                    <li>Filters & filter <br>media</li>
+                    <li>Substrates</li>
+                    <li>Electricals</li>
+                    <li>Food</li>
+                </ul>
             </div>
             <div id="main-content">
                 <p class="single-day-regular hook-title">Dive In Today!</p>
@@ -63,15 +68,15 @@
                     joy of having a fish.</p>
                 <p id="main-thanks">T(h)anks for taking care of your fish!</p>
                 <p id="product-link">Click <a href="products.html">here</a> to see our products!</p>
-                <img id="happy-fish" src="../assets/images/decor/happy-fish.png" alt="smiling fish" />
+                <img id="happy-fish" src="../assets/images/decor/happy-fish.png" alt="smiling fish">
             </div>
             <div id="main-content-right">
-                Special Deals for 
-                Qualifying Items 
+                Special Deals for
+                Qualifying Items
                 (in-store only)
             </div>
         </div>
-
+ <p id="temp-link">This is the temporary link the the admin page <a href="./admin/admin.html">HERE</a></p>
     </main>
     <aside id="aside-container">
 
