--- a/csc372-hw/Tanks-for-Fish/templates/products.html
+++ b/csc372-hw/Tanks-for-Fish/templates/products.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+    Name: Victor Lor
+    Date: 2.23.2025
 
+    This is the products.html page for Tanks For Fish Products. This page contains a list of products available
+    on the site. There is a button to view more details about the product. 
+-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,16 +25,15 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id="tff-nav">
             <a class="navbar-brand  tff-logo" href="index.html">
-                <img id="tanks-for-fish-logo" src="../assets/images/fish_tank3.png" alt="Bootstrap">
+                <img id="tanks-for-fish-logo" src="../assets/images/fish_tank3.png" alt="fish for tanks">
             </a>
             <div class="container-fluid">
-                <a class="navbar-brand title" id="single-day-regular-id"href="index.html">Tanks For Fish</a>
+                <a class="navbar-brand title" id="single-day-regular-id" href="index.html">Tanks For Fish</a>
                 <form class="d-flex search" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success nav-search-button" type="submit">Search</button>
                 </form>
-                <a id="cart" href=""><img id="shopping-cart" src="../assets/images/shopping_cart.png"> View My Cart</a>
-            </div>
+                <a id="cart" href="cart.html"><img id="shopping-cart" alt="shopping cart" src="../assets/images/shopping_cart.png"> View My Cart</a>
             </div>
         </nav>
         <div id="product-categories">
