changed link and pushed part of hw4

--- a/csc372-hw/Tanks-for-Fish/templates/admin/admin-upload.html
+++ b/csc372-hw/Tanks-for-Fish/templates/admin/admin-upload.html
@@ -4,7 +4,7 @@
     Name: Victor Lor
     Date: 2.27.2025
 
-    This is the 
+    This is the page where the admin can upload product data. 
 -->
 
 <head>
