--- a/csc372-hw/hw4/assets/styles.css
+++ b/csc372-hw/hw4/assets/styles.css
@@ -1,20 +1,38 @@
+body{
+    background-color: rgb(250, 243, 234);
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #player-throw{
-    background-color: antiquewhite;
+    background-color: rgb(140, 231, 227);
     text-align: center;
+    width: 70%;
+    margin-top: 1%;
 }
 #computer-throw{
-    background-color: aquamarine;
+    background-color:rgb(241, 180, 126); ;
     text-align: center;
+    width: 50%;
+    margin-top: 3%;
 }
 img{
     margin-left: 5%;
     border-radius: 5px;
 }
-.selected{
-    border-color: red;
-    border-style: solid;
-    border-width: 5px;
-}
 #outcome{
     text-align: center;
+}
+#result{
+    font-size: 30px;
+    border-color: black;
+}
+#reset-btn{
+    margin-top: 5%;
+    background-color: skyblue;
+    border-radius: 5px;
+    padding: 10px 20px;
+    border: none;
 }
