--- a/csc372-hw/Tanks-for-Fish/assets/css/products.css
+++ b/csc372-hw/Tanks-for-Fish/assets/css/products.css
@@ -4,14 +4,18 @@ main{
 }
 
 #product-categories{   
-    background-color: rgb(189, 236, 244); 
-    display:flex
+    background-color: rgb(189, 236, 245); 
+    display:flex;
 }
 .products{
+    border-radius: 2px;
     flex-basis: 33.33%;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid gray;
     text-align: center;
+}
+.products:hover{
+    background-color: rgb(150, 210, 250);
 }
 
 #main-product-container{
